<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>BeansBeans</groupId>
  <artifactId>BeansBeans</artifactId>
  <version>0.5.2-ALPHA</version>

  <properties>
	  <maven.compiler.target>17</maven.compiler.target>
	  <maven.compiler.source>17</maven.compiler.source>
	  <spigotversion>1.19.2-R0.1-SNAPSHOT</spigotversion>
  </properties>
  
  <dependencies>
    <dependency>
  		<groupId>io.papermc.paper</groupId>
  		<artifactId>paper-api</artifactId>
  		<version>${spigotversion}</version>
   	    <scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.spigotmc</groupId>
  		<artifactId>spigot</artifactId>
  		<version>${spigotversion}</version>
		<classifier>remapped-mojang</classifier>
   	    <scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>com.comphenix.protocol</groupId>
  		<artifactId>ProtocolLib</artifactId>
  		<version>4.8.0</version>
   	    <scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>com.sk89q.worldedit</groupId>
  		<artifactId>worldedit-bukkit</artifactId>
  		<version>7.2.12</version>
   	    <scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>us.dynmap</groupId>
  		<artifactId>dynmap-api</artifactId>
  		<version>3.4</version>
   	    <scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>net.dv8tion</groupId>
  		<artifactId>JDA</artifactId>
  		<version>5.0.0-alpha.4</version>
   	    <scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>club.minnced</groupId>
  		<artifactId>discord-webhooks</artifactId>
  		<version>0.5.8</version>
   	    <scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.java-websocket</groupId>
  		<artifactId>Java-WebSocket</artifactId>
  		<version>1.5.3</version>
	</dependency>
	<dependency>
        <groupId>me.lucko</groupId>
        <artifactId>commodore</artifactId>
        <version>2.2</version>
        <scope>compile</scope>
    </dependency>
  </dependencies>
  
  <repositories>
	<repository>
    	<id>papermc</id>
    	<url>https://papermc.io/repo/repository/maven-public/</url>
	</repository>
	<repository>
        <id>spigot-repo</id>
        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
	<repository>
		<id>protocollib</id>
		<url>https://repo.dmulloy2.net/repository/public/</url>
	</repository>
	<repository>
		<id>worldedit</id>
		<url>https://maven.enginehub.org/repo/</url>
	</repository>
	<repository>
		<id>dynmap</id>
		<url>https://repo.mikeprimm.com</url>
	</repository>
	<repository>
		<id>JDA</id>
		<url>https://m2.dv8tion.net/releases</url>
	</repository>
	<repository>
   		<name>jcenter</name>
   		<id>bintray-jcenter</id>
    	<url>https://jcenter.bintray.com</url>
	</repository>
	<repository>
        <id>minecraft-repo</id>
        <url>https://libraries.minecraft.net/</url>
    </repository>
  </repositories>
  
  <build>
    <plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-jar-plugin</artifactId>
			<version>3.2.2</version>
			<configuration>
				<outputDirectory>${user.home}/Desktop/Minecraft Servers/Bukkit Server/plugins/</outputDirectory>
			</configuration>
		</plugin>
    	<plugin>
    		<groupId>org.apache.maven.plugins</groupId>
    		<artifactId>maven-compiler-plugin</artifactId>
    		<version>3.8.1</version>
    		<configuration>
       			<release>17</release>
    		</configuration>
		</plugin>
      	<plugin>
            <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
      </plugin>
		<plugin>
			<groupId>net.md-5</groupId>
			<artifactId>specialsource-maven-plugin</artifactId>
			<version>1.2.3</version>
			<executions>
				<execution>
					<phase>package</phase>
					<goals>
						<goal>remap</goal>
					</goals>
					<id>remap-obf</id>
					<configuration>
						<srgIn>org.spigotmc:minecraft-server:${spigotversion}:txt:maps-mojang</srgIn>
						<reverse>true</reverse>
						<remappedDependencies>org.spigotmc:spigot:${spigotversion}:jar:remapped-mojang</remappedDependencies>
						<remappedArtifactAttached>true</remappedArtifactAttached>
						<remappedClassifierName>remapped-obf</remappedClassifierName>
					</configuration>
				</execution>
				<execution>
					<phase>package</phase>
					<goals>
						<goal>remap</goal>
					</goals>
					<id>remap-spigot</id>
					<configuration>
						<inputFile>${project.build.directory}/${project.artifactId}-${project.version}-remapped-obf.jar</inputFile>
						<srgIn>org.spigotmc:minecraft-server:${spigotversion}:csrg:maps-spigot</srgIn>
						<remappedDependencies>org.spigotmc:spigot:${spigotversion}:jar:remapped-obf</remappedDependencies>
					</configuration>
				</execution>
			</executions>
		</plugin>
    </plugins>
  </build>
</project>